# ReferralService

./: README.md  docker-compose.yml  init-schema.sql  pyproject.toml
app/: main.py
app/api_v1/: general.py  links_rst.py  referrals_rst.py  token_generation.py  token_rst.py
app/common/: config.py  responses.py  sqla.py
app/dependencies/: magic.py  token_dep.py
app/models/: links_db.py  token_db.py
app/utils/: referrals.py  setup.py
migrations/versions/: 15f96023feae_db_creation.py
