[tool.poetry]
name = "SmartReferralAPI"
version = "0.1.0"
description = ""
authors = ["Vladimir Ermakov <https://github.com/waldemarX>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
