[tool.poetry]
name = "SmartReferralAPI"
version = "0.1.0"
description = ""
authors = ["Vladimir Ermakov <https://github.com/waldemarX>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-marshals = "^0.3.12"
aenum = "^3.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
